<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EjercicioIntents</string>
    <string name="hello_world">Hello world!</string>
    <string name="formulario">Form</string>
    <string name="camara">Camera</string>
    <string name="contacto">Contact</string>
    <string name="okey">OK</string>
    <string name="volver">Back</string>
    <string name="title_activity_actividad_secundaria">ActividadSecundaria</string>
    <string name="escribir">Escribe aquí</string>
    <string name="mensaje">Mensaje de vuelta</string>

</resources>
