<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editorSecundario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/escribir" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/labelSecundario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mensaje" />

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/botonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:text="@string/volver" />

        <Button
            android:id="@+id/botonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:text="@string/okey" />

    </RelativeLayout>

</LinearLayout>
