<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <EditText
        android:id="@+id/editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:layout_weight="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/formulario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulario"
            android:layout_weight="1" />

        <Button
            android:id="@+id/camara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camara"
            android:layout_weight="1" />

        <Button
            android:id="@+id/contacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
